Chain deletion support
